# wrapper

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: anthropic.py  anthropic_ex.py  azure_ex.py  bedrock_ex.py  groq_ex.py  mistral.py  ollama.py  openai.py
wrapper/: __init__.py  _version.py  base.py  config.py  core.py  utils.py
wrapper/providers/: anthropic_provider.py  azure_provider.py  bedrock_provider.py  groq_provider.py  mistral_provider.py  ollama_provider.py  openai_provider.py
